--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -48,3 +48,23 @@ img {
     background-color: #65d;
     transform: scale(1.1);
 }
+
+input, textarea {
+    border-radius: 4px;
+    border: 1px solid white;
+    padding: 15px;
+    box-shadow: 0 4px 8px rgba(30,60,90,.1);
+    transition: all .3s;
+    font-size: 1rem;
+    font-family: "Avenir", Helvetica, Arial, sans-serif;
+    margin-bottom: 15px;
+}
+
+input:hover,
+input:focus,
+textarea:hover,
+textarea:focus {
+    outline: none;
+    box-shadow: 0 6px 12px rgba(30,60,90,.2);
+    border-color: #87f;
+}
